--- a/app/src/main/res/layout/about_dialog.xml
+++ b/app/src/main/res/layout/about_dialog.xml
@@ -54,6 +54,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/msgs_common_dialog_close"
+            android:visibility="gone"
             android:textAppearance="@android:style/TextAppearance.Large"	/>
 
     </LinearLayout>
