--- a/app/src/main/res/values-ja/string_ja.xml
+++ b/app/src/main/res/values-ja/string_ja.xml
@@ -6,8 +6,8 @@
         <string name="msgs_about_dlg_change_btn">更新履歴</string>
         <string name="msgs_dlg_title_about">ZipUtility3について</string>
         <string name="msgs_dlg_title_about_func_desc">ZipUtility3_Desc_JA_Short.htm</string>
-        <string name="msgs_dlg_title_about_privacy_desc">ZipUtility3_Privacy_JA.html</string>
-        <string name="msgs_dlg_title_about_change_desc">ZipUtility3_Change_JA.html</string>
+        <string name="msgs_dlg_title_about_privacy_desc">ZipUtility3_about_JA_Privacy.md</string>
+        <string name="msgs_dlg_title_about_change_desc">ZipUtility3_Help_JA_change.md</string>
     <!-- Log -->
         <string name="msgs_log_management_title">ログ管理</string>
         <string name="msgs_log_management_enable_log_file_hint">ZipUtility3に関する質問・問題を記述してください</string>
@@ -240,6 +240,19 @@
         <string name="msgs_main_suppress_add_external_storage_notification_title">外部ストレージ追加の通知</string>
         <string name="msgs_main_suppress_add_external_storage_notification_msg">新しい外部ストレージが検出されました。外部ストレージを追加しますか？</string>
         <string name="msgs_main_suppress_add_external_storage_notification_suppress">この通知を次回以降表示しない （アプリ設定で再表示できます）</string>
+        <string name="msgs_storage_permission_all_file_access_title">全てのファイルへのアクセス</string>
+        <string name="msgs_storage_permission_all_file_access_image">all_file_access_desc_en.png</string>
+        <string name="msgs_storage_permission_all_file_access_request_message">ZipUtility3では貴方が指定する様々なディレクトリー/ファイルを作成・削除・改名とZIPファイルの作成・解凍を行うために「全てのファイルへのアクセス」の許可が必要です。\n下記の手順で「全てのファイルへのアクセス」を許可してください。\n0.画面最下部の「次へ」をタップしてください。\n1.「全てのファイルへのアクセス」画面が表示されますので\"ZipUtility3\"をタップしてください\n2.画面右端のスイッチをオンにしてください\n3.画面右端のスイッチが青になっている事を確認する\n4.戻るキーでアプリケーション画面に戻る</string>
+        <string name="msgs_storage_permission_all_file_access_button_text">次へ</string>
+        <string name="msgs_storage_permission_all_file_access_denied_message">All File Accessが許可されるまではアプリを起動できません。許可する場合はアプリを再起動してください。</string>
+        <string name="msgs_storage_permission_all_file_access_error_message">All File Access許可画面を表示できませんでした。\nエラー=%s</string>
+    <!-- Privacy Policy confirm -->
+        <string name="msgs_privacy_policy_confirm_title">プライバシーポリシーへの同意</string>
+        <string name="msgs_privacy_policy_confirm_message">プライバシーポリシーをスクロールして全てお読み下さい。</string>
+        <string name="msgs_privacy_policy_confirm_btn_deny">不同意</string>
+        <string name="msgs_privacy_policy_confirm_btn_confirm">同意して続行</string>
+        <string name="msgs_privacy_policy_confirm_deny_title">プライバシーポリシーへの同意</string>
+        <string name="msgs_privacy_policy_confirm_deny_message">プライバシーポリシーに同意していただけないとZipUtility3は使用できません</string>
     <!-- System info -->
         <string name="msgs_menu_list_system_info">システム情報</string>
         <string name="msgs_info_storage_copy_clipboard">コピー</string>
