--- a/app/src/main/res/layout/main_local_file.xml
+++ b/app/src/main/res/layout/main_local_file.xml
@@ -18,13 +18,35 @@
             android:layout_height="fill_parent"
             android:orientation="vertical" >
 
-            <Spinner
-                android:id="@+id/local_file_storage_spinner"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
-                android:layout_marginRight="2dp"
-                android:minHeight="40dp" />
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/local_file_copy_cut_info_btn"
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="C/C" />
+
+                <Button
+                    android:id="@+id/local_file_copy_cut_clear_btn"
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/msgs_zip_local_file_clear_copy_cut_item" />
+
+                <Spinner
+                    android:id="@+id/local_file_storage_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginRight="2dp"
+                    android:minHeight="40dp" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -82,71 +104,71 @@
             <!--android:clipToPadding="false"-->
             <!--android:scrollbarStyle="outsideOverlay"-->
 
-            <LinearLayout
-                android:id="@+id/local_file_copy_cut_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:layout_marginEnd="2dp"
-                android:background="@drawable/dialog_box_outline_turquoise"
-                android:orientation="vertical">
+<!--            <LinearLayout-->
+<!--                android:id="@+id/local_file_copy_cut_view"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="2dp"-->
+<!--                android:layout_marginEnd="2dp"-->
+<!--                android:background="@drawable/dialog_box_outline_turquoise"-->
+<!--                android:orientation="vertical">-->
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_gravity="center_vertical"
-                        android:text="@string/msgs_zip_cont_header_clipboard"
-                        android:textAppearance="?android:attr/textAppearanceMedium"/>
-                    <TextView
-                        android:id="@+id/local_file_copy_cut_mode"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_gravity="center_vertical"
-                        android:text="Copy"
-                        android:textAppearance="?android:attr/textAppearanceMedium"/>
-                    <TextView
-                        android:id="@+id/local_file_copy_cut_from"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_gravity="center_vertical"
-                        android:text="Local"
-                        android:textAppearance="?android:attr/textAppearanceMedium"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:orientation="horizontal">
-                    <com.sentaroh.android.Utilities3.Widget.NonWordwrapButton
-                        android:id="@+id/local_file_copy_cut_item"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_gravity="center_vertical"
-                        android:ellipsize="end"
-                        android:gravity="center_vertical|left"
-                        android:lines="1"
-                        android:text="/storage/emulated/0/DCIM"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
-                    <Button
-                        android:id="@+id/local_file_copy_cut_clear_btn"
-                        style="?android:attr/buttonStyleSmall"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="@string/msgs_zip_local_file_clear_copy_cut_item" />
-                </LinearLayout>
-            </LinearLayout>
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="5dp"-->
+<!--                    android:orientation="horizontal">-->
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginLeft="5dp"-->
+<!--                        android:layout_gravity="center_vertical"-->
+<!--                        android:text="@string/msgs_zip_cont_header_clipboard"-->
+<!--                        android:textAppearance="?android:attr/textAppearanceMedium"/>-->
+<!--                    <TextView-->
+<!--                        android:id="@+id/local_file_copy_cut_mode"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginLeft="5dp"-->
+<!--                        android:layout_gravity="center_vertical"-->
+<!--                        android:text="Copy"-->
+<!--                        android:textAppearance="?android:attr/textAppearanceMedium"/>-->
+<!--                    <TextView-->
+<!--                        android:id="@+id/local_file_copy_cut_from"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginLeft="5dp"-->
+<!--                        android:layout_gravity="center_vertical"-->
+<!--                        android:text="Local"-->
+<!--                        android:textAppearance="?android:attr/textAppearanceMedium"/>-->
+<!--                </LinearLayout>-->
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginBottom="5dp"-->
+<!--                    android:layout_marginStart="5dp"-->
+<!--                    android:layout_marginEnd="5dp"-->
+<!--                    android:orientation="horizontal">-->
+<!--                    <com.sentaroh.android.Utilities3.Widget.NonWordwrapButton-->
+<!--                        android:id="@+id/local_file_copy_cut_item"-->
+<!--                        android:layout_width="0dp"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:layout_gravity="center_vertical"-->
+<!--                        android:ellipsize="end"-->
+<!--                        android:gravity="center_vertical|left"-->
+<!--                        android:lines="1"-->
+<!--                        android:text="/storage/emulated/0/DCIM"-->
+<!--                        android:textAppearance="?android:attr/textAppearanceSmall" />-->
+<!--                    <Button-->
+<!--                        android:id="@+id/local_file_copy_cut_clear_btn"-->
+<!--                        style="?android:attr/buttonStyleSmall"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_gravity="center_vertical"-->
+<!--                        android:text="@string/msgs_zip_local_file_clear_copy_cut_item" />-->
+<!--                </LinearLayout>-->
+<!--            </LinearLayout>-->
 
             <include layout="@layout/context_view_local"/>
 
