--- a/app/src/main/res/layout/main_zip_file.xml
+++ b/app/src/main/res/layout/main_zip_file.xml
@@ -20,7 +20,20 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
-
+                <Button
+                    android:id="@+id/zip_file_copy_cut_info_btn"
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="C/C" />
+                <Button
+                    android:id="@+id/zip_file_copy_cut_clear_btn"
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/msgs_zip_local_file_clear_copy_cut_item" />
                 <Spinner
                     android:id="@+id/zip_file_zip_file_spinner"
                     android:layout_width="0dp"
@@ -31,8 +44,8 @@
                     android:minHeight="40dp" />
                 <ImageButton
                     android:id="@+id/zip_file_info_close_btn"
-                    android:layout_width="44dp"
-                    android:layout_height="44dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="2dp"
                     android:src="@drawable/ic_32_close_black"
@@ -113,71 +126,71 @@
                 android:fastScrollAlwaysVisible="false"
                 android:fastScrollEnabled="false" />
 
-            <LinearLayout
-                android:id="@+id/zip_file_copy_cut_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:layout_marginEnd="2dp"
-                android:background="@drawable/dialog_box_outline_turquoise"
-                android:orientation="vertical">
+<!--            <LinearLayout-->
+<!--                android:id="@+id/zip_file_copy_cut_view"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="2dp"-->
+<!--                android:layout_marginEnd="2dp"-->
+<!--                android:background="@drawable/dialog_box_outline_turquoise"-->
+<!--                android:orientation="vertical">-->
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_gravity="center_vertical"
-                        android:text="@string/msgs_zip_cont_header_clipboard"
-                        android:textAppearance="?android:attr/textAppearanceMedium"/>
-                    <TextView
-                        android:id="@+id/zip_file_copy_cut_mode"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_gravity="center_vertical"
-                        android:text="Copy"
-                        android:textAppearance="?android:attr/textAppearanceMedium"/>
-                    <TextView
-                        android:id="@+id/zip_file_copy_cut_from"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_gravity="center_vertical"
-                        android:text="Local"
-                        android:textAppearance="?android:attr/textAppearanceMedium"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:orientation="horizontal">
-                    <com.sentaroh.android.Utilities3.Widget.NonWordwrapButton
-                        android:id="@+id/zip_file_copy_cut_item"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_gravity="center_vertical"
-                        android:ellipsize="end"
-                        android:gravity="center_vertical|left"
-                        android:lines="1"
-                        android:text="/storage/emulated/0/DCIM"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
-                    <Button
-                        android:id="@+id/zip_file_copy_cut_clear_btn"
-                        style="?android:attr/buttonStyleSmall"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="@string/msgs_zip_local_file_clear_copy_cut_item" />
-                </LinearLayout>
-            </LinearLayout>
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="5dp"-->
+<!--                    android:orientation="horizontal">-->
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginLeft="5dp"-->
+<!--                        android:layout_gravity="center_vertical"-->
+<!--                        android:text="@string/msgs_zip_cont_header_clipboard"-->
+<!--                        android:textAppearance="?android:attr/textAppearanceMedium"/>-->
+<!--                    <TextView-->
+<!--                        android:id="@+id/zip_file_copy_cut_mode"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginLeft="5dp"-->
+<!--                        android:layout_gravity="center_vertical"-->
+<!--                        android:text="Copy"-->
+<!--                        android:textAppearance="?android:attr/textAppearanceMedium"/>-->
+<!--                    <TextView-->
+<!--                        android:id="@+id/zip_file_copy_cut_from"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginLeft="5dp"-->
+<!--                        android:layout_gravity="center_vertical"-->
+<!--                        android:text="Local"-->
+<!--                        android:textAppearance="?android:attr/textAppearanceMedium"/>-->
+<!--                </LinearLayout>-->
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginBottom="5dp"-->
+<!--                    android:layout_marginStart="5dp"-->
+<!--                    android:layout_marginEnd="5dp"-->
+<!--                    android:orientation="horizontal">-->
+<!--                    <com.sentaroh.android.Utilities3.Widget.NonWordwrapButton-->
+<!--                        android:id="@+id/zip_file_copy_cut_item"-->
+<!--                        android:layout_width="0dp"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:layout_gravity="center_vertical"-->
+<!--                        android:ellipsize="end"-->
+<!--                        android:gravity="center_vertical|left"-->
+<!--                        android:lines="1"-->
+<!--                        android:text="/storage/emulated/0/DCIM"-->
+<!--                        android:textAppearance="?android:attr/textAppearanceSmall" />-->
+<!--                    <Button-->
+<!--                        android:id="@+id/zip_file_copy_cut_clear_btn"-->
+<!--                        style="?android:attr/buttonStyleSmall"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_gravity="center_vertical"-->
+<!--                        android:text="@string/msgs_zip_local_file_clear_copy_cut_item" />-->
+<!--                </LinearLayout>-->
+<!--            </LinearLayout>-->
 
             <include layout="@layout/context_view_zip" />
 
